# bzd

./: .gitignore  README.md  main.spec  new.spec  pyproject.toml  ЛР №3Э.webloc
src/: __init__.py  app.py  main.py  new.py  parser.py  schemas.py
src/data/: data_1.json  first.json  second.json  third.json
src/pages/: generator.py  materials.py  shared.py  work.py
src/static/: index.js  index.js.map
