[project]
name = "bzd"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastui>=0.5.2",
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "nuitka>=2.1.4",
    "pyinstaller>=6.5.0",
    "python-multipart>=0.0.9",
    "flask>=3.0.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[project.scripts]
app = "src.new:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
